# arro-server

./: .dockerignore  .env.example  .gitignore  Containerfile  LICENSE  README.md  compose.yaml  pyproject.toml  roadmap.md
.github/: CODEOWNERS
demos/: db_setup.ipynb  demo.ipynb  demo_01.ipynb  demo_02.ipynb  demo_03.ipynb  demo_embs_def.ipynb  embeddings_evaluation.ipynb  embs_eval.ipynb  final_comparison.ipynb  local_data.db
embeddings_nomic_structured_768d_raw.zarr/: zarr.json
frontend/: app.js  index.html  styles.css
notebooks/: arrowspace_tuning.db  lambda_distribution.html  search_engine_demo.ipynb
scripts/: get_query_emb_nomic.py  make_example_data.py  nomic_corpus_embs.py  process_json.py
storage/: dataset_0056fb-arrowspace_metadata.json  dataset_0056fb-clustered-dm.parquet  dataset_0056fb-clustered-dm_metadata.json  dataset_0056fb-gl-matrix.parquet  dataset_0056fb-gl-matrix_metadata.json  dataset_0056fb-lambdas.parquet  dataset_0056fb-lambdas_metadata.json  dataset_0056fb-laplacian-input.parquet  dataset_0056fb-laplacian-input_metadata.json  dataset_0056fb-raw_input.parquet  dataset_0056fb-raw_input_metadata.json  dataset_02e338-arrowspace_metadata.json  dataset_02e338-clustered-dm.parquet  dataset_02e338-clustered-dm_metadata.json  dataset_02e338-gl-matrix.parquet  dataset_02e338-gl-matrix_metadata.json  dataset_02e338-lambdas.parquet  dataset_02e338-lambdas_metadata.json  dataset_02e338-laplacian-input.parquet  dataset_02e338-laplacian-input_metadata.json  dataset_02e338-raw_input.parquet  dataset_02e338-raw_input_metadata.json  dataset_02e6d7-arrowspace_metadata.json  dataset_02e6d7-clustered-dm.parquet  dataset_02e6d7-clustered-dm_metadata.json  dataset_02e6d7-gl-matrix.parquet  dataset_02e6d7-gl-matrix_metadata.json  dataset_02e6d7-lambdas.parquet  dataset_02e6d7-lambdas_metadata.json  dataset_02e6d7-laplacian-input.parquet  dataset_02e6d7-laplacian-input_metadata.json  dataset_02e6d7-raw_input.parquet  dataset_02e6d7-raw_input_metadata.json  dataset_035020-arrowspace_metadata.json  (+3244 more)
(+139 files in other folders)
