[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "arro-server"
version = "0.1.0"
description = "FastAPI server for serving Zarr v3 datasets with ArrowSpace graph-Laplacian index (Includes Semantic Engine Demo)"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Genefold / ArrowSpace contributors" }]
dependencies = [
    "arrowspace>=0.26.2",
    "arrowspace-tuner>=0.3.1",
    "einops>=0.8.2",
    "fastapi>=0.110",
    "google-genai>=1.70.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=1.26",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
    "tinydb>=4.8.2",
    "torch",
    "torchaudio",
    "torchvision",
    "uvicorn[standard]>=0.27",
    "zarr>=3.0"
]

[project.optional-dependencies]
zarr = ["zarr>=3.0", "fsspec>=2024.2"]
arrow = ["pyarrow>=15.0"]
# pip install arrowspace  (repo: https://github.com/tuned-org-uk/pyarrowspace)
# Task 1.1: renamed extra key from 'pyarrowspace' -> 'arrowspace' to match PyPI package name
arrowspace = ["arrowspace"]
dev = [
    "pytest>=8.0",
    "fastapi[standard]>=0.110",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "fsspec>=2024.2",
    "pre-commit"
]

[project.scripts]
arro-server = "arro_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/arro_server",
    "src/semantic_engine_demo"
]

[tool.hatch.build.targets.wheel.shared-data]
"frontend" = "share/arro_server/frontend"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"